<resources>
    <string name="app_name">EcomApp</string>
    <string name="title_activity_admin__support">Admin_Support</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name </string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_price">Price</string>
    <string name="hint_details">Product Details</string>
    <string name="Rs">\u20B9</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs_49999">Rs.49999</string>
    <string name="total_amount">Total Amount</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
