<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".User_details.UserRegistration">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="Registration"
                    android:textColor="#000000"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_regnameadmin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/user_namereg"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/name"
                        android:drawableLeft="@drawable/name"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_name"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_regemailsel"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/user_emailreg"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/email"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_email"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_regmobileadmin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/user_mobilereg"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/andi"
                        android:drawableLeft="@drawable/andi"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_mobile"
                        android:maxLength="10"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_regaddressadmin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/user_addressreg"
                        android:inputType="textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/home"
                        android:drawableLeft="@drawable/home"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_address"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_regpassadmin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/user_passwordreg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/home"
                        android:drawableLeft="@drawable/home"
                        android:drawablePadding="8dp"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/user_registerreg"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:background="#7D3C98"
                    android:layout_gravity="center"
                    android:text="Register"
                    android:textColor="#FDFEFE"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>