<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="#F8F9F9"
    tools:context=".Navigatore_Activity.AddProducts">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Product "
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textColor="#171718"
                android:layout_gravity="center"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_productname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/namedetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/back"
                        android:drawableLeft="@drawable/back"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_name"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/pricedetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:drawableStart="@drawable/back"
                        android:drawableLeft="@drawable/back"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_price"
                        android:maxLength="10"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_details"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:id="@+id/product_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="8"
                        android:minLines="2"
                        android:drawableStart="@drawable/back"
                        android:drawableLeft="@drawable/back"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_details"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <ImageView
                    android:id="@+id/details_image"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/images_logo"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose Image"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:background="#7D3C98"
                    android:textColor="#FDFEFE"
                    android:id="@+id/btnchoose"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#7D3C98"
                    android:textColor="#FDFEFE"
                    android:text="Add Data" />

                <Button
                    android:id="@+id/btnlist"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:background="#7D3C98"
                    android:textColor="#FDFEFE"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>